test/typechecker.d/invalid/fns2.souc.bad
n = 5

f(x: Integer): Integer = do
	if True
		return n
	return 'a'
